--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: 'MEDomics-Udes'
-    description: 'MEDomicsLab application officiel website.'
+    description: 'MEDomicsLab application official website.'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
