C MEDomicslab to C MEDomics

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -41,7 +41,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} MEDomicsLab'
+    notice: '© {year} MEDomics'
 
 # Localization
 locale:
